{{$NEXT}}

0.002     2017-02-20 01:50:33 EST
  - Handle cases where AUTOCAN may return blessed objects with underlying
    coderefs or code dereference overloads

0.001     2017-02-19 20:49:18 EST
  - First release