@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Only invoke a code dereference overload once if returned by AUTOCAN
 
 0.002     2017-02-20 01:50:33 EST
   - Handle cases where AUTOCAN may return blessed objects with underlying
